cluster/apps/traefik/traefik/ingress/foundryvtt/ingress-routes.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/traefik.io/ingressroute_v1alpha1.json
# Documentation: https://doc.traefik.io/traefik/reference/routing-configuration/kubernetes/crd/http/ingressroute/
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-routes-wan-https
  namespace: foundryvtt
  annotations:
    cert-manager.io/cluster-issuer: ${CLUSTER_ISSUER}
    external-dns.kubernetes.io/hostname: foundry.${EXTERNAL_DOMAIN}
    external-dns.kubernetes.io/target: ${TRAEFIK_IP4}
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`foundry.${EXTERNAL_DOMAIN}`)
      middlewares:
        - name: compress
      services:
        - name: foundryvtt
          namespace: foundryvtt
          passHostHeader: true
          port: 30000
  tls:
    secretName: "foundryvtt-${EXTERNAL_DOMAIN/./-}-tls"
